[gd_scene load_steps=15 format=3 uid="uid://cthxoel5sus6v"]

[ext_resource type="Shader" uid="uid://byfa3t51pf655" path="res://ui/screen_manager/pause_screen/pause_panel.tres" id="1_gxk54"]
[ext_resource type="Script" uid="uid://diilonnsbj7qw" path="res://ui/key_scenes/title_screen/title_screen.gd" id="1_kmorl"]
[ext_resource type="Texture2D" uid="uid://knkg28xlj4h8" path="res://ui/screen_manager/pause_screen/textures/spike.png" id="2_xb1fp"]
[ext_resource type="Texture2D" uid="uid://qslbjwvvnw28" path="res://ui/pattern_solar.png" id="3_6joap"]
[ext_resource type="Texture2D" uid="uid://dfbwpeg0x4vwn" path="res://ui/key_scenes/title_screen/title.png" id="4_wkbm3"]
[ext_resource type="PackedScene" uid="uid://bb6wf0meej6ox" path="res://ui/buttons/ui_button.tscn" id="7_rdlol"]
[ext_resource type="Texture2D" uid="uid://c82mjoeosc2ka" path="res://ui/key_scenes/title_screen/play_icon.png" id="8_tdj5p"]
[ext_resource type="Texture2D" uid="uid://b140m0l1g3u2v" path="res://ui/key_scenes/title_screen/edit_icon.png" id="9_csve6"]
[ext_resource type="Texture2D" uid="uid://d342wayf41exh" path="res://ui/key_scenes/title_screen/rec_icon.png" id="12_c8lgs"]

[sub_resource type="Animation" id="Animation_685si"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Contents:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bgjk2"]
resource_name = "logo_float"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -60), Vector2(0, -63), Vector2(0, -60)]
}

[sub_resource type="Animation" id="Animation_x8tv6"]
resource_name = "start"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -60)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Contents:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nb7wo"]
_data = {
&"RESET": SubResource("Animation_685si"),
&"logo_float": SubResource("Animation_bgjk2"),
&"start": SubResource("Animation_x8tv6")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k4lgp"]
shader = ExtResource("1_gxk54")
shader_parameter/background_scroll = Vector2(0.05, 0.05)
shader_parameter/modulate_alpha = 1.0
shader_parameter/spike_scroll_speed = 0.05
shader_parameter/spike_dimensions = Vector2(0, 0)
shader_parameter/spike_texture = ExtResource("2_xb1fp")

[node name="TitleScreen" type="Control" node_paths=PackedStringArray("anime", "focus_grabber")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kmorl")
anime = NodePath("AnimationPlayer")
focus_grabber = NodePath("Contents/Choices/Play")
play_scene = "uid://bite6o37o0mpt"
edit_scene = "uid://bfrw3lh0b17ri"
rec_scene = "uid://dhwd6b68nr2lu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nb7wo")
}
autoplay = "start"

[node name="Backdrop" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_k4lgp")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6joap")
stretch_mode = 1
flip_h = true

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("4_wkbm3")
stretch_mode = 3

[node name="Contents" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpaceTop" type="Control" parent="Contents"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4

[node name="Choices" type="HBoxContainer" parent="Contents"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="SpaceLeft" type="Control" parent="Contents/Choices"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Play" parent="Contents/Choices" instance=ExtResource("7_rdlol")]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "PLAY"
icon = ExtResource("8_tdj5p")

[node name="SpaceMiddle" type="Control" parent="Contents/Choices"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Edit" parent="Contents/Choices" instance=ExtResource("7_rdlol")]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "EDIT"
icon = ExtResource("9_csve6")

[node name="SpaceMiddle2" type="Control" parent="Contents/Choices"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Record" parent="Contents/Choices" instance=ExtResource("7_rdlol")]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "REC"
icon = ExtResource("12_c8lgs")

[node name="SpaceRight" type="Control" parent="Contents/Choices"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="SpaceBottom" type="Control" parent="Contents"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Contents/Choices/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Contents/Choices/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Contents/Choices/Record" to="." method="_on_record_pressed"]
